methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:1: error: method makeV overrides nothing
override def makeV() {
             ^